--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,375 @@
-.App {
-  text-align: center;
+.app {
+  background-color: #fff;
+  min-height: 100vh;
+}
+.container {
+  max-width: 1200px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+header {
+  width: 100%;
+  display: flex;
+  position: absolute;
+  top: 70px;
+  justify-content: center;
+  align-items: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.box-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+figure {
+  margin: 0;
+  z-index: 1000;
+}
+.links_list {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0;
+  list-style: none;
+}
+.link a {
+  text-decoration: none;
+  color: #fff;
+  margin-right: 25px;
+  cursor: pointer;
+  position: relative;
+  font-weight: bold;
+}
+.menu_icon {
+  display: none;
+}
+
+
+@media (min-width: 769px) {
+  .link a:hover::after , .footer_list li a:hover::after{
+    content: ' ';
+    position: absolute;
+    display: table-cell;
+    border-bottom: 2px solid #fff;
+    top: 30px;
+    right: 25%;
+    left: 25%;
+    width: 30px;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.introduction {
+  height: 100vh;
+  background-image: url('./images/desktop/image-hero.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: top, left;
+  
+  margin: 0;
+}
+.box-intro {
+  margin: 0 auto;
+  height: 100%;
+  width: 100%;
+
   display: flex;
-  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+}
+.box-title {
+  border: 2px solid #fff;
+  position: relative;
+  top: 25px;
+  padding: 30px;
+  width: 650px;
+}
+h1 {
+  font-size: 5rem;
+  margin: 0;
+  color: #fff;
+  text-transform: uppercase;
+  font-weight: 300;
+  font-family: 'Josefin Sans', sans-serif;
+}
+.vr-section {
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.box-vr {
+  padding: 100px 0;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  position: relative;
+  width: 100%;
 }
+.vr-info {
+  background-color: #fff;
+  position: absolute;
+  padding: 50px 0 0 60px;
+  bottom: 100px;
+  right: 0;
+  width: 50%;
+  z-index: 1000;
+}
+h2 {
+  font-size: 3rem;
+  color: hsl(0, 0%, 41%);
+  text-transform: uppercase;
+}
+.vr-info p {
+  max-width: 400px;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  color: hsl(0, 0%, 41%);
+  font-family: 'Alata', sans-serif;
+}
+.box-creations {
+  margin: 0 auto;
+  padding-bottom: 150px;
+  position: relative;
+}
+.creations-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.creations-header button {
+  background-color: #fff;
+  border: 2px solid hsl(0, 0%, 41%);
+  color: hsl(0, 0%, 41%);
+  font-size: 0.8rem;
+  letter-spacing: 3px;
+  font-family: 'Alata', sans-serif;
+  text-transform: uppercase;
+  padding: 5px 25px;
+  cursor: pointer;
+}
+.creations-header button:hover {
+  background-color: #000;
+  color: #fff;
+}
+.creations-list {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  
+}
+.creation-item {
+  position: relative;
+  height: 450px;
+  margin-bottom: 30px;
+  border-radius: 3px
+  
+}
+.creation-item:hover p{
+  color: hsl(0, 0%, 10%);
+  font-weight: bold;
+}
+.creation-item::before{
+  position: absolute;
+  content: " ";
+  top: 0;
+  left: 0;
+  background-image: linear-gradient(to bottom, transparent , rgba(0,0,0,0.6));
+  height: 100%;
+  width: 100%;
+}
+.creation-item:hover::before{
+  background: rgba(255,255,255,0.5);
+  cursor: pointer;
+}
+.creation-item img {
+  height: 450px;
+  width: 100%;
+  border-radius: 3px;
+}
+.creation-item p {
+  position: absolute;
+  color: #fff;
+  bottom: 20px;
+  font-size: 1.4rem;
+  left: 25px;
+  max-width: 120px;
+  font-weight: 400;
+  text-transform: uppercase;
+}
+footer{
+  background-color: #000;
+  display: flex;
+  justify-content: center;
+}
+.box-footer{
+  width: 100%;
+  display: flex;
+  align-items: center;
+  padding: 40px 0;
+  justify-content: space-between;
+}
+.footer_list{
+  
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0;
+    margin-top: 20px;
+    padding: 0;
+    list-style: none;
+  
+}
+.footer_list li a{
+ 
+    text-decoration: none;
+    color: #fff;
+    margin-right: 25px;
+    cursor: pointer;
+    position: relative;
+    font-weight: bold;
+  
+}
+.media-icons {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+.media-icons a{
+  margin-right: 15px;
+  border-bottom: 2px solid transparent;
+}
+.media-icons a:hover{
+ border-bottom: 2px solid #fff;
+}
+.copyright{
+  color: hsl(0, 0%, 55%);
+  margin-top: 20px;
+  font-weight: bold;
+}
+@media(max-width: 1100px){
+  .box-header,  .box-creations, .box-footer{
+    padding-left: 20px;
+    padding-right: 20px;
   }
-  to {
-    transform: rotate(360deg);
+  .box-title{
+    left: 20px;
+  }
+  
+}
+@media (max-width: 768px) {
+  .menu_icon {
+    display: block;
+    z-index: 4000;
+  }
+  .logo{
+    z-index: 4000;
+  }
+  .links_list {
+    height: 100vh;
+    width: 100%;
+    position: fixed;
+    left: -130%;
+    top: 0px;
+    z-index: 3000;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    background-color: #000;
+    transition: all 0.3s;
+  }
+  .links_list.responsive {
+    left: 0;
+  }
+  .link {
+    text-transform: uppercase;
+    margin-bottom: 15px;
+    font-size: 22px;
+  }
+  .box-intro{
+    width: 90%;
+    justify-content: center;
+  }
+  .box-title{
+    width: 100%;
+    left: 0;
+  }
+  h1{
+    font-size: 4rem;
+  }
+  .box-vr {
+    flex-direction: column;
+    padding-left:  20px;
+    padding-right: 20px;
+  }
+  .box-vr figure img{
+    width: 100%;
+  }
+  .vr-info {
+    text-align: center;
+    position: static;
+    width: 100%;
+    padding-left: 0px;
+    
+  }
+  .vr-info p{
+    max-width: none;
+    
+  }
+  .box-footer{
+    flex-direction: column;
+    justify-content: center;
+  }
+  .left_container, .right_container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+
+  }
+  .footer_list{
+    flex-direction: column;
+  }
+  .footer_list li{
+    margin-bottom: 20px;
+  }
+}
+@media (max-width: 620px){
+  .creation-item ,.creation-item img{
+    height: 150px;
+    width: 100%;
+  }
+  .creation-item img{
+    object-fit: cover;
+  }
+  .creations-header button{
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%, 0);
+    bottom: 110px;
+  }
+  h2{
+    text-align: center;
+    width: 100%;
+  }
+  
+}
+@media (max-width: 530px){
+  .box-title{
+    padding: 40px 15px;
+  }
+  h1{
+    font-size: 3rem;
+  }
+  h2{
+    font-size: 2rem;
+  }
+}
+@media (max-width: 380px){
+  
+  .box-title{
+    padding: 40px 15px;
+  }
+  h1{
+    font-size: 2.5rem;
   }
 }
